@@ -547,40 +547,40 @@ class DbAccessClient extends Client implements DbAccessIF {
 //        return ((Boolean) object).booleanValue();
 //    }
 
-    @Override
-    public boolean changeSco(int a, java.lang.String b, java.lang.String c, boolean d) throws IOException, XmlRpcException {
-        Vector vv = new Vector(4);
-        vv.addElement(new Integer(a));
-        vv.addElement(b);
-        vv.addElement(c);
-        vv.addElement(Boolean.valueOf(d));
-        Object object = invoke("changeSco", vv);
-        return ((Boolean) object).booleanValue();
-    }
-
-    @Override
-    public boolean changeSco(int a, java.lang.String b, java.lang.String c, java.lang.String d, boolean e) throws IOException, XmlRpcException {
-        Vector vv = new Vector(5);
-        vv.addElement(new Integer(a));
-        vv.addElement(b);
-        vv.addElement(c);
-        vv.addElement(d);
-        vv.addElement(Boolean.valueOf(e));
-        Object object = invoke("changeSco", vv);
-        return ((Boolean) object).booleanValue();
-    }
-
-    @Override
-    public boolean changeSco(int a, java.lang.String b, java.lang.String c, boolean d, java.lang.String e) throws IOException, XmlRpcException {
-        Vector vv = new Vector(5);
-        vv.addElement(new Integer(a));
-        vv.addElement(b);
-        vv.addElement(c);
-        vv.addElement(Boolean.valueOf(d));
-        vv.addElement(e);
-        Object object = invoke("changeSco", vv);
-        return ((Boolean) object).booleanValue();
-    }
+//    @Override
+//    public boolean changeSco(int a, java.lang.String b, java.lang.String c, boolean d) throws IOException, XmlRpcException {
+//        Vector vv = new Vector(4);
+//        vv.addElement(new Integer(a));
+//        vv.addElement(b);
+//        vv.addElement(c);
+//        vv.addElement(Boolean.valueOf(d));
+//        Object object = invoke("changeSco", vv);
+//        return ((Boolean) object).booleanValue();
+//    }
+//
+//    @Override
+//    public boolean changeSco(int a, java.lang.String b, java.lang.String c, java.lang.String d, boolean e) throws IOException, XmlRpcException {
+//        Vector vv = new Vector(5);
+//        vv.addElement(new Integer(a));
+//        vv.addElement(b);
+//        vv.addElement(c);
+//        vv.addElement(d);
+//        vv.addElement(Boolean.valueOf(e));
+//        Object object = invoke("changeSco", vv);
+//        return ((Boolean) object).booleanValue();
+//    }
+//
+//    @Override
+//    public boolean changeSco(int a, java.lang.String b, java.lang.String c, boolean d, java.lang.String e) throws IOException, XmlRpcException {
+//        Vector vv = new Vector(5);
+//        vv.addElement(new Integer(a));
+//        vv.addElement(b);
+//        vv.addElement(c);
+//        vv.addElement(Boolean.valueOf(d));
+//        vv.addElement(e);
+//        Object object = invoke("changeSco", vv);
+//        return ((Boolean) object).booleanValue();
+//    }
 
 //    @Override
 //    public boolean changeScoSequenceNr(int a, int b, int c, int d) throws IOException, XmlRpcException {
@@ -860,18 +860,18 @@ class DbAccessClient extends Client implements DbAccessIF {
         return ((Boolean) object).booleanValue();
     }
 
-    @Override
-    public boolean changeSco(int a, java.lang.String b, java.lang.String c, boolean d, byte[] e, boolean f) throws IOException, XmlRpcException {
-        Vector vv = new Vector(6);
-        vv.addElement(new Integer(a));
-        vv.addElement(b);
-        vv.addElement(c);
-        vv.addElement(Boolean.valueOf(d));
-        vv.addElement(e);
-        vv.addElement(Boolean.valueOf(f));
-        Object object = invoke("changeSco", vv);
-        return ((Boolean) object).booleanValue();
-    }
+//    @Override
+//    public boolean changeSco(int a, java.lang.String b, java.lang.String c, boolean d, byte[] e, boolean f) throws IOException, XmlRpcException {
+//        Vector vv = new Vector(6);
+//        vv.addElement(new Integer(a));
+//        vv.addElement(b);
+//        vv.addElement(c);
+//        vv.addElement(Boolean.valueOf(d));
+//        vv.addElement(e);
+//        vv.addElement(Boolean.valueOf(f));
+//        Object object = invoke("changeSco", vv);
+//        return ((Boolean) object).booleanValue();
+//    }
 
 //    @Override
 //    public boolean addStudentToClass(int classID, int studentID) throws IOException, SQLException, XmlRpcException, DwoXmlRpcException {
